--- a/css/style.css
+++ b/css/style.css
@@ -136,5 +136,44 @@ img {
         margin: 0 auto;
         padding: 0 20px;
     }
+}
 
+@media screen and (max-width: 767px){
+    .container{
+        max-width: 480px;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+
+    .row{
+        display: block;
+    }
+
+    .lessons .col {
+        width: 100%;
+    }
+
+    .steps .col {
+        width: 100%;
+    }
+
+    .why-us .col-left {
+        width: 100%;
+    }
+    
+    .why-us .col-right {
+        width: 100%;
+    }
+
+    .why-us{
+        background-color: black;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+        margin-bottom: 0;
+    }
+
+    .steps{
+        margin-bottom: 0;
+    }
+   
 }
