--- a/css/style.css
+++ b/css/style.css
@@ -127,12 +127,20 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
 ************************************************/
+/* BONUS  */
+@media screen and (max-width: 1139px){
+    .container{
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+}
 
 /* MEDIA QUERY  */
 @media screen and (max-width: 768px){
     
     .container {
-        max-width: 100%;
+        width: 100%;
         margin: 0 auto;
         padding: 0 20px;
     }
@@ -140,7 +148,7 @@ img {
 
 @media screen and (max-width: 480px){
     .container{
-        max-width: 100%;
+        width: 100%;
         margin: 0 auto;
         padding: 0 20px;
     }
